# cardano-dev-2023

./: .gitpod.Dockerfile  .gitpod.yml  mkdocs.yml
docs/: README.md
examples-haskell/: cabal.project
examples-haskell/.devcontainer/: Dockerfile  docker-compose-haskell.yml
examples-haskell/03-datatypes-and-functions/: .gitignore  datatypes-and-functions.cabal
examples-haskell/03-datatypes-and-functions/src/: DatatypesAndFunctions.hs
examples-haskell/03-datatypes-functions/: datatypes-functions.cabal
examples-haskell/03-datatypes-functions/src/: DatatypesFunctions.hs
examples-haskell/04-polymorphism-type-classes/: polymorphism-type-classes.cabal
examples-haskell/04-polymorphism-type-classes/src/: PolymorphismTypeClasses.hs
examples-haskell/05-higher-order-functions/: higher-order-functions.cabal
examples-haskell/05-higher-order-functions/src/: HigherOrderFunctions.hs
examples-haskell/06-packaging-and-tools/: CHANGELOG.md  packing-and-tools.cabal
examples-haskell/06-packaging-and-tools/src/: MyLib.hs
examples-haskell/07-io/: io.cabal
examples-haskell/07-io/app/: Main.hs
examples-haskell/07-io/src/: IO.hs
examples-haskell/08-testing/: cabal.project  testing.cabal
examples-haskell/08-testing/src/: Testing.hs
examples-haskell/08-testing/test/: Main.hs
examples-haskell/09-abstraction-patterns/: LICENSE  abstraction-patterns.cabal
examples-haskell/09-abstraction-patterns/src/: AbstractionPatterns.hs  Table.hs
examples-haskell/10-concurrency/: concurrency.cabal
examples-haskell/10-concurrency/app/: accounts-async.hs  accounts-stm.hs  accounts.hs  ioref.hs  number-forever.hs  shouting-client.hs  shouting-server.hs
examples-haskell/10-concurrency/src/: Concurrency.hs
examples-haskell/11-servers/: servers.cabal
examples-haskell/11-servers/app/: chat-server.hs  counting-server.hs  shouting-server.hs
examples-haskell/11-servers/src/: List.hs
examples-haskell/11-servers/src/Servers/: Chat.hs  Counting.hs  Shouting.hs  Utils.hs
examples-haskell/12-parsing/: parsing.cabal
examples-haskell/12-parsing/src/: Parsing.hs
examples-haskell/12-parsing/src/Parser/: Five.hs  Four.hs  One.hs  Three.hs  Two.hs
examples-haskell/14-data-structures/: data-structures.cabal
examples-haskell/14-data-structures/src/: DataStructures.hs
examples-haskell/14-datatypes/: datatypes.cabal
examples-haskell/14-datatypes/src/: Datatypes.hs  Probability.hs
examples-haskell/15-more-data-structures/: more-data-structures.cabal
examples-haskell/15-more-data-structures/src/: Merkle.hs  MerkleTree.hs  MoreDataStructures.hs
examples-haskell/15-more-data-structures/src/Merkle/: Core.hs  Hash.hs  Path.hs
examples-haskell/16-optics/: optics.cabal
examples-haskell/16-optics/src/: Optics.hs  Traversable.hs
examples-haskell/17-more-optics/: more-optics.cabal
examples-haskell/17-more-optics/src/: MoreOptics.hs  Optics.hs  Profunctor.hs
examples-haskell/18-more-monads/: LICENSE  more-monads.cabal
examples-haskell/18-more-monads/app/: more-monads.hs
examples-haskell/18-more-monads/src/: MoreMonads.hs  Order.hs  ReaderIO.hs
examples-haskell/19-free-monads/: free-monads.cabal
examples-haskell/19-free-monads/src/FreeMonads/: AdHoc.hs  Concurrency.hs  Expr.hs  Free.hs  MTL.hs  Prob.hs
examples-haskell/20-generic-programming/: generic-programming.cabal
examples-haskell/20-generic-programming/src/: Example.hs  GHC.hs  Simple.hs
examples-haskell/21-template-haskell/: template-haskell.cabal
examples-haskell/21-template-haskell/app/: Main.hs
examples-haskell/21-template-haskell/src/: Power.hs  Quasi.hs  UsePower.hs  UseQuasi.hs
examples-marlowe-haskell/22-marlowe-haskell/: marlowe-haskell.cabal
examples-marlowe-haskell/22-marlowe-haskell/app/: marlowe.hs
examples-marlowe-haskell/22-marlowe-haskell/src/FreeMonads/: Expr.hs
examples-marlowe/lessons/01-runtime-cli/: 01-runtime-cli.ipynb
examples-marlowe/lessons/lottery-cli/: lottery-cli.ipynb
examples-marlowe/setup/: 00-local-environment.ipynb
examples-plutus/: .gitignore  cabal.project  config-core-maestro-preprod-no-key.json  time.txt
examples-plutus/.devcontainer/: Dockerfile  devcontainer.json  docker-compose-plutus.yml
examples-plutus/24-hello-world/assets/: gift.plutus
examples-plutus/24-hello-world/offchain/: hello-world-offchain.cabal
examples-plutus/24-hello-world/offchain/src/: Offchain.hs
examples-plutus/24-hello-world/onchain/: hello-world-onchain.cabal
examples-plutus/24-hello-world/onchain/src/: Gift.hs
examples-plutus/24-hello-world/scripts/: collect-gift.sh  make-gift.sh
examples-plutus/25-validators/offchain/: validators-offchain.cabal
examples-plutus/25-validators/offchain/src/: Offchain.hs
examples-plutus/25-validators/onchain/: validators-onchain.cabal
examples-plutus/26-time-minting/keys/: beneficiary-preprod.addr  beneficiary.pkh  beneficiary.skey  beneficiary.vkey  user-preprod.addr  user.skey  user.vkey
examples-plutus/26-time-minting/offchain/: time-minting-offchain.cabal
examples-plutus/26-time-minting/offchain/src/: Offchain.hs
examples-plutus/27-testing/: testing-lesson.cabal
examples-plutus/27-testing/homework/: TExploitableSwap.hs
examples-plutus/27-testing/lecture/: ExploitableSwap.hs  NegativeRTimed.hs
examples-plutus/27-testing/lecture_tests/: PSM.hs  PTNegativeRTimed.hs  UTNegativeRTimed.hs
examples-plutus/28-stablecoin/: stablecoin.cabal
examples-plutus/28-stablecoin/assets/: collateral.plutus  minting.plutus  nft.plutus  oracle.plutus
examples-plutus/28-stablecoin/lecture/off-chain/frontend/src/components/: DeployScripts.tsx  MintNFTButton.tsx  Oracle.tsx
examples-plutus/28-stablecoin/lecture/off-chain/frontend/src/pages/: _app.tsx
examples-plutus/28-stablecoin/lecture/on-chain/: Collateral.hs  Minting.hs  NFT.hs  Oracle.hs
examples-plutus/28-stablecoin/tests/: UnitTesting.hs
examples-plutus/utilities/: utilities.cabal
tests/t1/: README.md  cabal.project  hie.yaml  t1.cabal
tests/t1/.devcontainer/: devcontainer.json
tests/t1/doctest/: doctests.hs
tests/t1/src/: T1.hs
(+13 files in other folders)
