cabal-version:       3.4
name:                higher-order-functions
version:             0.1.0.0
author:              Lars Brünjes
maintainer:          brunjlar@gmail.com
build-type:          Simple

library
  exposed-modules:     HigherOrderFunctions
  hs-source-dirs:      src
  build-depends:       base ^>=4.16
  default-language:    Haskell2010
  ghc-options:         -Wall
