cabal-version:      3.0
name:               testing
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Lars Bruenjes
maintainer:         lars.bruenjes@iohk.io
category:           Testing
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Testing
    build-depends:    base ^>=4.16.4.0
                    , QuickCheck
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite testing-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base ^>=4.16.4.0
                    , hspec
                    , testing
