cabal-version:      3.0
name:               abstraction-patterns
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Lars Bruenjes
maintainer:         lars.bruenjes@iohk.io

library
    exposed-modules:  AbstractionPatterns
                      Table
    build-depends:    base ^>=4.16.4.0
                    , mtl
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall