cabal-version:      3.0
name:               servers
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Lars Bruenjes
maintainer:         lars.bruenjes@iohk.io

library
    exposed-modules:  List
                      Servers.Chat
                      Servers.Counting
                      Servers.Shouting
                      Servers.Utils
    build-depends:    base ^>=4.16.4.0
                    , async
                    , containers
                    , network
                    , network-simple
                    , stm
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall

executable shouting-server
    main-is:          shouting-server.hs
    build-depends:    base ^>= 4.16
                    , servers
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall -O2 -threaded -rtsopts -with-rtsopts=-N

executable counting-server
    main-is:          counting-server.hs
    build-depends:    base ^>= 4.16
                    , servers
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall -O2 -threaded -rtsopts -with-rtsopts=-N

executable chat-server
    main-is:          chat-server.hs
    build-depends:    base ^>= 4.16
                    , servers
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall -O2 -threaded -rtsopts -with-rtsopts=-N