cabal-version:      3.0
name:               parsing
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Lars Bruenjes
maintainer:         lars.bruenjes@iohk.io

library
    exposed-modules:  Parser.One
                      Parser.Two
                      Parser.Three
                      Parser.Four
                      Parser.Five
                      Parsing
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall