cabal-version:      3.0
name:               more-data-structures
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Lars Bruenjes
maintainer:         lars.bruenjes@iohk.io
category:           Data
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Merkle
                      MerkleTree
                      MoreDataStructures
    other-modules:    Merkle.Core
                      Merkle.Hash
                      Merkle.Path
    build-depends:    base ^>=4.16.4.0
                    , cryptonite
                    , ghc-prim
                    , binary
                    , memory
                    , text
                    , bytestring
                    , vector
    hs-source-dirs:   src
    default-language: Haskell2010
