cabal-version:      3.0
name:               more-optics
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Lars Bruenjes
maintainer:         lars.bruenjes@iohk.io
category:           Data
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MoreOptics
                      Optics
                      Profunctor
    build-depends:    base ^>=4.16.4.0
                    , bytestring
                    , containers
                    , lens
                    , mtl
                    , profunctors
                    , tagged
                    , text
    hs-source-dirs:   src
    default-language: Haskell2010
