cabal-version:      3.0
name:               generic-programming
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Lars Bruenjes
maintainer:         lars.bruenjes@iohk.io
category:           Data
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Example
                      GHC
                      Simple
    build-depends:    base ^>=4.16.4.0
                    , aeson
                    , binary
                    , mtl
    hs-source-dirs:   src
    default-language: Haskell2010