cabal-version:      3.0
name:               templates
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Lars Bruenjes
maintainer:         lars.bruenjes@iohk.io
category:           Data
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Power
                      Quasi
                      UsePower
                      UseQuasi
    build-depends:    base ^>=4.16.4.0
                    , blaze-html
                    , blaze-markup
                    , lens
                    , shakespeare
                    , template-haskell
    hs-source-dirs:   src
    default-language: Haskell2010

executable templates
    main-is:          Main.hs
    build-depends:    base ^>= 4.16
                    , criterion
                    , templates
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall -O2
