cabal-version:      3.4
name:               marlowe-haskell
version:            0.1.0.0
author:             IOG's education team
maintainer:         education@iohk.io
license:            MIT
build-type:         Simple

library
    exposed-modules:  FreeMonads.Expr
    build-depends:    base
                    , containers
                    , mtl
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall

executable marlowe
    main-is:            marlowe.hs
    hs-source-dirs:     app
    build-depends:      base ^>=4.14.3.0
                      , marlowe-cardano
    default-language:   Haskell2010
    ghc-options:        -Wall