cabal-version: 3.4
name:                   stablecoin
version:                0.1.0.0
description:            End to end examples of creating and executing Plutus scripts.
author:                 IOG's education team
maintainer:             education@iohk.io
license:                Apache-2.0
build-type:             Simple

common common-all
    build-depends:    base 
                    , aeson
                    , bytestring
                    , containers
                    , cardano-api
                    , data-default
                    , plutus-ledger-api
                    , plutus-core
                    , plutus-tx-plugin
                    , plutus-tx
                    , text
                    , serialise
                    , utilities
                    , QuickCheck
                    , tasty
                    , tasty-quickcheck
                    , plutus-simple-model
                    , mtl
    default-language: Haskell2010
    ghc-options: -Wall -fobject-code -fno-ignore-interface-pragmas
                 -fno-omit-interface-pragmas -fno-strictness 
                 -fno-spec-constr -fno-specialise -fexpose-all-unfoldings
                 -fplugin-opt PlutusTx.Plugin:defer-errors
                 -fplugin-opt PlutusTx.Plugin:target-version=1.0.0

library
  import:               common-all
  hs-source-dirs:       lecture/on-chain
  exposed-modules:      NFT
                        Oracle
                        Collateral
                        Minting

test-suite stablecoin-ut
    import:             common-all
    type:               exitcode-stdio-1.0
    main-is:            UnitTesting.hs
    hs-source-dirs:     tests
    build-depends:      stablecoin
